# hdl-utils

./: .gitignore  pyproject.toml  readme.md  setup.py
.github/workflows/: ci.yml
example/: counter.py  counter.v  data_stream_inv.py  data_stream_inverter.py  data_stream_pass_through.py  stream_signature.py  tb_counter.py  tb_data_stream_inv.py  tb_stream_signature.py  test_cores.py  test_counter.py  utils.py
example/tb/: tb_counter.py  tb_data_stream_inverter.py  tb_data_stream_pass_through.py  tb_stream_signature.py
example/uart/: tb_uart_rx.py  test_uart.py  uart_rx.v
hdl_utils/amaranth_utils/: generate_verilog.py
hdl_utils/amaranth_utils/interfaces/: interfaces.py
hdl_utils/cocotb_utils/: tb.py  testcases.py
hdl_utils/cocotb_utils/buses/: __init__.py  axi_stream.py  data_stream.py
scripts/: run_examples.sh
src/hdl_utils/amaranth_utils/: axi_dma.py  axi_dma_triple_buffer.py  axi_lite_device.py  axi_stream_fifo.py  axi_stream_packet_rate_limiter.py  axi_stream_splitter.py  axi_stream_to_full.py  axi_stream_width_converter.py  coding.py  generate_verilog.py  reg_map.py  rstn_wrapper.py  skid_buffer.py
src/hdl_utils/amaranth_utils/interfaces/: axi4_stream.py  axi_full.py  axi_lite.py  interfaces.py
src/hdl_utils/cocotb_utils/: tb.py  tb_utils.py  testcases.py
src/hdl_utils/cocotb_utils/buses/: axi_full.py  axi_lite.py  axi_memory_controller.py  axi_stream.py  bus.py  data_stream.py  reg_map.py
src/hdl_utils/test/: example_reg_map.py  test_amaranth_utils.py  test_cocotb_utils.py
src/hdl_utils/test/tb/: tb_axi_dma.py  tb_axi_dma_triple_buffer.py  tb_axi_lite_device.py  tb_axi_stream.py  tb_axi_stream_fifo.py  tb_axi_stream_fifo_cdc.py  tb_axi_stream_fifo_packet_mode.py  tb_axi_stream_packet_rate_limiter.py  tb_axi_stream_pass_through.py  tb_axi_stream_splitter.py  tb_axi_stream_to_full.py  tb_axi_stream_width_converter_down.py  tb_axi_stream_width_converter_up.py
