[project]
name = "hdl-utils"
version = "0.1.0"
description = "HDL utils for Amaranth+Cocotb workflow"
readme = "readme.md"
authors = [
    {name = "Ariel Kukulanski", email = "akukulanski@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "cocotb",
    "cocotb-bus",
    "amaranth",
    "pytest",
    "numpy",
    "amaranth-cocotb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
amaranth-cocotb = { git = "https://github.com/akukulanski/amaranth-cocotb.git", branch = "compat-cocotb-test-0.2.2" }
