[project]
name = "hdl-utils"
version = "0.1.0"
description = "HDL utils for Amaranth+Cocotb workflow"
readme = "readme.md"
authors = [
    {name = "Ariel Kukulanski", email = "akukulanski@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "cocotb~=2.0.0",
    "amaranth",
    "pytest",
    "numpy",
    "amaranth-cocotb",
    "ipython",
    "cocotb-test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
amaranth-cocotb = { git = "https://github.com/akukulanski/amaranth-cocotb.git", branch = "compat-cocotb-test-0.2.2" }
cocotb-test = { git = "https://github.com/themperek/cocotb-test", branch = "master" }
